Closed Bug 1212659 Opened 10 years ago Closed 10 years ago

Fix layers.acceleration.force-enabled not working

Categories

(Core :: Graphics, defect)

40 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

Bug 1179051 separated out some acceleration/compositor backend tests, as a result layers.acceleration.force-enabled forces "acceleration" on but does not actually bypass backend compatibility tests.
Attachment #8671080 - Flags: review?(jmuizelaar) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: