Fix layers.acceleration.force-enabled not working. (bug 1212659, r=jrmuizel)